--- a/apps/QrCoDe.en/20100429zxfags/qrgen.html
+++ b/apps/QrCoDe.en/20100429zxfags/qrgen.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>QR Generator Pro</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="qrgen.css" />
 </head>
 <body>
   <div class="container">
@@ -66,6 +66,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
-  <script src="script.js"></script>
+  <script src="qrgen.js"></script>
 </body>
 </html>
