--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://nueakubpom.github.io/apps/">QrCode Generator</a>
+    <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a>
   </div>
   
   <script src="script.js"></script>
