--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <div class="container">
     <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a>
+    <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a>
+    <a href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a>
   </div>
   
   <script src="script.js"></script>
