--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a>
-    <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a>
-    <a href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a>
+    <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
+    <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a><br/>
+    <a href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a><br/>
   </div>
   
   <script src="script.js"></script>
