--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
     <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a><br/>
     <a href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a><br/>
-    <a hreft="https://ezdn.app/NueaKubPom">Donate</a><br/>
-    <a hrett="https://discord.gg/SyX26HGWg9">Discord</a>
+    <a href="https://ezdn.app/NueaKubPom">Donate</a><br/>
+    <a href="https://discord.gg/SyX26HGWg9">Discord</a>
   </div>
   
   <script src="script.js"></script>
