--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NueaKubPom</title>
+  <title>NZ</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -15,7 +15,6 @@
     <a href="https://ezdn.app/NueaKubPom">Donate</a><br/>
     <a href="https://discord.gg/SyX26HGWg9">Discord</a>
   </div>
-  
   <script src="script.js"></script>
 </body>
 </html>
