--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
-    <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a><br/>
+<!--     <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a><br/> -->
     <a href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a><br/>
     <a href="https://ezdn.app/NueaKubPom">Donate</a><br/>
     <a href="https://discord.gg/SyX26HGWg9">Discord</a>
