--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div class="container">
-    <a href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
-    <a href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a><br/>
-    <a href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a><br/>
-    <a href="https://ezdn.app/NueaKubPom">Donate</a><br/>
-    <a href="https://discord.gg/SyX26HGWg9">Discord</a>
+    <a class="resbae" href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
+    <a class="resbae" href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom</a><br/>
+    <a class="resbae" href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom</a><br/>
+    <a class="resbae" href="https://ezdn.app/NueaKubPom">Donate</a><br/>
+    <a class="resbae" href="https://discord.gg/SyX26HGWg9">Discord</a>
   </div>
   <script src="script.js"></script>
 </body>
