--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
   <div class="container">
     <a class="resbae" href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
     <a class="resbae" href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom (รอรับแค่ขนาดหน้าจอคอมยังไม่รองรับมือถือหรือแท็บเล็ต)</a><br/>
-    <a class="resbae" href="https://nueakubpomv-2.onrender.com/">Web NueaKubPom V.2</a><br/>
     <a class="resbae" href="https://nueakubpomwebapp.onrender.com/">Web NueaKubPom Full</a><br/>
     <a class="resbae" href="https://ezdn.app/NueaKubPom">Donate</a><br/>
-    <a class="resbae" href="https://discord.gg/SyX26HGWg9">Discord</a>
+    <a class="resbae" href="https://discord.gg/SyX26HGWg9">Discord</a><br/>
+    <a class="resbae" href="https://www.youtube.com/@nueakubpom-coding">Youtube</a><br/>
+    <a class="resbae" href="https://www.tiktok.com/@nueakubpom?_t=ZS-8yfEvPdzJfm&_r=1">Tiktok</a><br/>
   </div>
   <script src="script.js"></script>
 </body>
