--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a class="resbae" href="https://ezdn.app/NueaKubPom">Donate</a><br/>
     <a class="resbae" href="https://discord.gg/SyX26HGWg9">Discord</a><br/>
     <a class="resbae" href="https://www.youtube.com/@nueakubpom-coding">Youtube</a><br/>
-    <a class="resbae" href="https://www.tiktok.com/@nueakubpom?_t=ZS-8yfEvPdzJfm&_r=1">Tiktok</a><br/>
+    <a class="resbae" href="https://www.tiktok.com/@nueakubpom?_t=ZS-8yfEvPdzJfm&_r=1">Tiktok</a>
   </div>
   <script src="script.js"></script>
 </body>
