--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="resbae" href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom (รอรับแค่ขนาดหน้าจอคอมยังไม่รองรับมือถือหรือแท็บเล็ต)</a><br/>
     <a class="resbae" href="https://nueakubpomwebapp.onrender.com/">Web NueaKubPom Full</a><br/>
     <a class="resbae" href="https://ezdn.app/NueaKubPom">Donate</a><br/>
-    <a class="resbae" href="https://discord.gg/SyX26HGWg9">Discord</a><br/>
+    <a class="resbae" href="https://discord.gg/7TFzeRfVz8">Discord</a><br/>
     <a class="resbae" href="https://www.youtube.com/@nueakubpom-coding">Youtube</a><br/>
     <a class="resbae" href="https://www.tiktok.com/@nueakubpom?_t=ZS-8yfEvPdzJfm&_r=1">Tiktok</a>
   </div>
