--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>NT STUDIO WEB</title>
+  <title>NT STUDIO</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,6 +12,7 @@
     <a class="resbae" href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
     <a class="resbae" href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom (รอรับแค่ขนาดหน้าจอคอมยังไม่รองรับมือถือหรือแท็บเล็ต)</a><br/>
     <a class="resbae" href="https://nueakubpomwebapp.onrender.com/">Web NueaKubPom Full</a><br/>
+    <a class="resbae" href="https://nt-studio-shop-minecraft.onrender.com">NT STUDIO SHOP<a><br/>
     <a class="resbae" href="https://ezdn.app/NueaKubPom">Donate</a><br/>
     <a class="resbae" href="https://discord.gg/7TFzeRfVz8">Discord</a><br/>
     <a class="resbae" href="https://www.youtube.com/@nueakubpom-coding">Youtube</a><br/>
