--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <a class="resbae" href="https://nueakubpom.github.io/apps/QrCoDe.en/20100429zxfags/qrgen.html">QrCode Generator</a><br/>
     <a class="resbae" href="https://portfolionueakubpom.onrender.com/">Portfolio NueaKubPom (รอรับแค่ขนาดหน้าจอคอมยังไม่รองรับมือถือหรือแท็บเล็ต)</a><br/>
     <a class="resbae" href="https://nueakubpomwebapp.onrender.com/">Web NueaKubPom Full</a><br/>
-    <a class="resbae" href="https://nt-studio-shop-minecraft.onrender.com">NT STUDIO SHOP<a><br/>
+    <a class="resbae" href="https://nkp-ntsto-shop.fwh.is">NKPNTSTO SHOP<a><br/>
     <a class="resbae" href="https://ezdn.app/NueaKubPom">Donate</a><br/>
     <a class="resbae" href="https://discord.gg/7TFzeRfVz8">Discord</a><br/>
     <a class="resbae" href="https://www.youtube.com/@nueakubpom-coding">Youtube</a><br/>
