--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <h1>NueaKubPom</h1>
     <p>เลือกบริการที่คุณต้องการ:</p>
 
-    <a href="./apps/QrCoDe.th/040f78e1-8e6b-48dc-a173-3edadc7aae20/qrgen.html" class="button-link">🎨 สร้าง QR Code</a>
-    
-    <a href="YOUR_SHOP_LINK_HERE" class="button-link" target="_blank">🛍️ NKPNTSTO SHOP</a>
+    <div id="links-container">
+      </div>
+
   </div>
+  
+  <script src="app.js"></script>
 </body>
 </html>
