--- a/admin.html
+++ b/admin.html
@@ -142,7 +142,7 @@
         <label>ข้อความ:</label>
         <input type="text" id="edit-text" required />
         <label>URL (ลิงก์):</label>
-        <input type="url" id="edit-url" placeholder="https://..." required />
+        <input type="text" id="edit-url" placeholder="https://..." required />
         <label>การแสดงผล (Target):</label>
         <select id="edit-target">
           <option value="_self">เปิดในแท็บเดิม (_self)</option>
