--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NueaKubPom - หน้าหลัก</title>
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
+  
+  <!-- (ใหม่!) เพิ่ม Font Awesome 6 CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+
   <link rel="stylesheet" href="style.css" /> 
 </head>
 <body>
@@ -12,11 +16,14 @@
     <h1>NueaKubPom</h1>
     <p>เลือกบริการที่คุณต้องการ:</p>
 
+    <!-- (เหมือนเดิม) "container" รอรับลิงก์ -->
     <div id="links-container">
-      </div>
+      <!-- ลิงก์จาก JSON จะถูกเติมมาที่นี่... -->
+    </div>
 
   </div>
   
+  <!-- (เหมือนเดิม) เรียกใช้ JavaScript -->
   <script src="app.js"></script>
 </body>
 </html>
